Finalizing some details

--- a/src/pages/elo/elo.html
+++ b/src/pages/elo/elo.html
@@ -52,7 +52,7 @@
         <div col-12 text-center>
           <h1 class="primary">Avant match</h1>
           <h3>Estimations</h3>
-          <h4>{{ elo.expected(p1, p2) }}</h4>
+          <h4>{{ expected(p1, p2) }}</h4>
         </div>
       </ion-col>
     </ion-row>
