--- a/src/pages/progress/progress.html
+++ b/src/pages/progress/progress.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>Progress</ion-title>
+    <ion-title>Progression</ion-title>
   </ion-navbar>
 </ion-header>
 
